--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,11 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>8.0.8</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
